tests/paczka1/small_fuzzy/27871226.err
Error in line 2: QmRgbKLB6h A156 61,7
Error in line 11: QmRgbKLB6h A766 82,3
